--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@netlify/plugin-nextjs": "^5.9.4",
     "@next/bundle-analyzer": "^15.2.0",
     "@sentry/nextjs": "^9.2.0",
     "@types/node": "^20.10.0",
