--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@builder.io/partytown": "^0.10.3",
     "@vercel/analytics": "^1.1.1",
+    "critters": "^0.0.23",
     "lazysizes": "^5.3.2",
     "next": "15.1.7",
     "react": "^18.2.0",
