--- a/package.json
+++ b/package.json
@@ -23,18 +23,20 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@fullhuman/postcss-purgecss": "^7.0.2",
     "@netlify/plugin-nextjs": "^5.9.4",
     "@next/bundle-analyzer": "^15.2.0",
     "@sentry/nextjs": "^9.2.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.15",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.20",
     "compression-webpack-plugin": "^11.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "postcss": "^8.5.3",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.3.2"
   }
 }
