--- a/netlify.toml
+++ b/netlify.toml
@@ -2,11 +2,11 @@
   command = "npm run build"
   publish = ".next"
 
+[build.environment]
+  NETLIFY_NEXT_PLUGIN_SKIP = "true"
+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
-
-[build.environment]
-  NEXT_USE_NETLIFY_EDGE = "true"
 
 [build.processing]
   skip_processing = false
